@@ -1,3 +1,8 @@
+2009-12-22  Joe English  <jenglish@users.sourceforge.net>
+	
+	* library/ttk/sizegrip.tcl: Patch to avoid bizarro behavior
+	under compiz [Bug 2912356].
+
 2009-12-20  Donal K. Fellows  <dkf@users.sf.net>
 
 	* unix/tkUnixSend.c (ServerSecure): [Patch 2917663]: Better support
